--- a/second/configs/car.lite.config
+++ b/second/configs/car.lite.config
@@ -111,8 +111,8 @@ model: {
 train_input_reader: {
   dataset: {
     dataset_class_name: "KittiDataset"
-    kitti_info_path: "/media/yy/960evo/datasets/kitti/kitti_infos_train.pkl"
-    kitti_root_path: "/media/yy/960evo/datasets/kitti"
+    kitti_info_path: "/media/zzhou/data/data-KITTI/object/kitti_infos_train.pkl"
+    kitti_root_path: "/media/zzhou/data/data-KITTI/object"
   }
   
   batch_size: 12
@@ -138,7 +138,7 @@ train_input_reader: {
     remove_environment: false
 
     database_sampler {
-      database_info_path: "/media/yy/My Passport/datasets/kitti/kitti_dbinfos_train.pkl"
+      database_info_path: "/media/zzhou/data/data-KITTI/object/kitti_dbinfos_train.pkl"
       sample_groups {
         name_to_max_num {
           key: "Car"
@@ -192,9 +192,9 @@ train_config: {
 eval_input_reader: {
   dataset: {
     dataset_class_name: "KittiDataset"
-    kitti_info_path: "/media/yy/My Passport/datasets/kitti/kitti_infos_val.pkl"
-    # kitti_info_path: "/media/yy/My Passport/datasets/kitti/kitti_infos_test.pkl"
-    kitti_root_path: "/media/yy/My Passport/datasets/kitti"
+    kitti_info_path: "/media/zzhou/data/data-KITTI/object/kitti_infos_val.pkl"
+    # kitti_info_path: "/media/zzhou/data/data-KITTI/object/kitti_infos_test.pkl"
+    kitti_root_path: "/media/zzhou/data/data-KITTI/object"
   }
   batch_size: 12
   preprocess: {
