--- a/second/configs/car.fhd.config
+++ b/second/configs/car.fhd.config
@@ -79,17 +79,17 @@ model: {
     target_assigner: {
       class_settings: {
         anchor_generator_range: {
-          sizes: [1.95017717, 4.60718145, 1.72270761] # wlh
+          sizes: [1.6, 3.9, 1.56] # wlh
           anchor_ranges: [0, -40.0, -1.00, 70.4, 40.0, -1.00] # carefully set z center
           rotations: [0, 1.57] # DON'T modify this unless you are very familiar with my code.
         }
-        matched_threshold : 0.4
-        unmatched_threshold : 0.3
-        class_name: "car"
+        matched_threshold : 0.6
+        unmatched_threshold : 0.45
+        class_name: "Car"
         use_rotate_nms: true
         use_multi_class_nms: false
         nms_pre_max_size: 1000
-        nms_post_max_size: 300
+        nms_post_max_size: 100
         nms_score_threshold: 0.3 # 0.4 in submit, but 0.3 can get better hard performance
         nms_iou_threshold: 0.01
 
@@ -98,7 +98,16 @@ model: {
           }
         }
       }
-
+      # anchor_generators: {
+      #   anchor_generator_stride: {
+      #     sizes: [1.6, 3.9, 1.56] # wlh
+      #     strides: [0.4, 0.4, 0.0] # if generate only 1 z_center, z_stride will be ignored
+      #     offsets: [0.2, -39.8, -1.00] # origin_offset + strides / 2
+      #     rotations: [0, 1.57] # DON'T modify this unless you are very familiar with my code.
+      #     matched_threshold : 0.6
+      #     unmatched_threshold : 0.45
+      #   }
+      # }
       sample_positive_fraction : -1
       sample_size : 512
       assign_per_class: true
@@ -109,11 +118,11 @@ model: {
 train_input_reader: {
   dataset: {
     dataset_class_name: "KittiDataset"
-    kitti_info_path: "/home/zzhou/local-datasets/data-lyft-3d/train_kitti/kitti_infos_train.pkl"
-    kitti_root_path: "/home/zzhou/local-datasets/data-lyft-3d/train_kitti"
+    kitti_info_path: "/media/yy/960evo/datasets/kitti/kitti_infos_train.pkl"
+    kitti_root_path: "/media/yy/960evo/datasets/kitti"
   }
 
-  batch_size: 4
+  batch_size: 8
   preprocess: {
     max_number_of_voxels: 17000
     shuffle_points: true
@@ -135,7 +144,30 @@ train_input_reader: {
     random_flip_x: false
     random_flip_y: true
     remove_environment: false
-
+    database_sampler {
+      database_info_path: "/media/yy/960evo/datasets/kitti/kitti_dbinfos_train.pkl"
+      sample_groups {
+        name_to_max_num {
+          key: "Car"
+          value: 15
+        }
+      }
+      database_prep_steps {
+        filter_by_min_num_points {
+          min_num_point_pairs {
+            key: "Car"
+            value: 5
+          }
+        }
+      }
+      database_prep_steps {
+        filter_by_difficulty {
+          removed_difficulties: [-1]
+        }
+      }
+      global_random_rotation_range_per_object: [0, 0]
+      rate: 1.0
+    }
   }
 }
 
@@ -164,7 +196,7 @@ train_config: {
 
   save_checkpoints_secs : 1800 # half hour
   save_summary_steps : 10
-  enable_mixed_precision: false 
+  enable_mixed_precision: false
   loss_scale_factor: -1
   clear_metrics_every_epoch: true
 }
@@ -172,11 +204,11 @@ train_config: {
 eval_input_reader: {
   dataset: {
     dataset_class_name: "KittiDataset"
-    kitti_info_path: "/home/zzhou/local-datasets/data-lyft-3d/train_kitti/kitti_infos_val.pkl"
-    # kitti_info_path: "/home/zzhou/local-datasets/data-lyft-3d/train_kitti/kitti_infos_test.pkl"
-    kitti_root_path: "/home/zzhou/local-datasets/data-lyft-3d/train_kitti"
+    kitti_info_path: "/media/yy/960evo/datasets/kitti/kitti_infos_val.pkl"
+    # kitti_info_path: "/media/yy/960evo/datasets/kitti/kitti_infos_test.pkl"
+    kitti_root_path: "/media/yy/960evo/datasets/kitti"
   }
-  batch_size: 4
+  batch_size: 8
   preprocess: {
     max_number_of_voxels: 40000
     shuffle_points: false
